update grade weights

--- a/content/syllabus/4.grading.md
+++ b/content/syllabus/4.grading.md
@@ -7,13 +7,14 @@ title: Grading
 
 Assignments in this course include the following:
 
-* **Labs – 5%**
+* **Quizzes – 10%**
+* **Labs – 20%**
   * Always due on Sundays.
   * 10% will be deducted for every late day
   * Only available until 1 week after the due date.
-* **Project 1 – 10%**
-* **Project 2 & Peer Review – 15%**
-* **Final Project & Peer Review – 25%**
+* **Project 1 – 20%**
+* **Project 2 & Peer Review – 20%**
+* **Final Project & Peer Review – 30%**
 * **Extra Credit**
   * Helping fellow classmates on MS Teams with their questions.
   * Contributing the Labs and Syllabus Repositories with Fixes.
