--- a/content/syllabus/2.need-help.md
+++ b/content/syllabus/2.need-help.md
@@ -3,6 +3,7 @@ sidebar_position: 2
 title: How to get Help?
 sidebar_label: Need Help?
 ---
+
 ## Search Online 🕵️‍♂️🕵️‍♀️
 
 First, when you get stuck you should search online for the answer to your problem. This is a key skill for you to develop.
@@ -21,6 +22,7 @@ First, when you get stuck you should search online for the answer to your proble
 
 - I will try to periodically check on the questions, comment or correct any answers.
 - I highly advise, you regularly check your classmates questions and participate.
+- ⛔️ DO NOT SEND ME A PRIVATE DM ON TEAMS.
 
 ## SoIT Learning Center
 
@@ -35,3 +37,5 @@ First, when you get stuck you should search online for the answer to your proble
 ## Have Questions regarding your grades or anything that only applies to you?
 
 Please email me and copy the class's TA. Any other questions should be posted on the class's channel.
+
+⛔️ DO NOT SEND ME A PRIVATE DM ON TEAMS.
