--- a/content/syllabus/3.policies.md
+++ b/content/syllabus/3.policies.md
@@ -13,7 +13,7 @@ title: Policies
 
 ## Communication protocols
 
-* I will post weekly announcements on Canvas (make sure it’s connected to your email)
+* I will post announcements on Canvas (make sure it’s connected to your email)
 * For *assignment-related questions* please ask you questions on the MS Teams channel and engage with your fellow classmates.
   * You're also encouraged to participate and answer any questions your fellow classmates may post on the board or on Canvas. **(this counts towards extra credit points)**
   * When posting a question about your code, you must include:
