--- a/content/syllabus/3.policies.md
+++ b/content/syllabus/3.policies.md
@@ -17,10 +17,10 @@ title: Policies
 * For *assignment-related questions* please ask you questions on the MS Teams channel and engage with your fellow classmates.
   * You're also encouraged to participate and answer any questions your fellow classmates may post on the board or on Canvas. **(this counts towards extra credit points)**
   * When posting a question about your code, you must include:
-    * what you are trying to do
-    * what have you already tried
-    * code snippet
-      * a Screenshot may be acceptable. However, something we can copy-paste would be greatly appreciated (GitHub Gist or code sandbox)
+    * What you are trying to do
+    * What have you already tried
+    * Code snippet
+      * A Screenshot may be acceptable. However, something we can copy-paste would be greatly appreciated (GitHub Gist or code sandbox)
 * For *grading-related questions*, please email the TA and copy me on the communication.
   * Please note `IT3038C` in the email subject.
 * For any email communication with me or the TA, make sure to:
