no share password

--- a/content/syllabus/3.policies.md
+++ b/content/syllabus/3.policies.md
@@ -44,6 +44,7 @@ As an instructor, I greatly value your input regarding the strengths and areas f
 
 ## Assignment Submission Workflow and Expectations
 
+* Sharing of In-Class Quiz or Exam passwords with students not present in the class is prohibited and will result in a zero for the quiz/exam for the student who was not present and the student who shared the password.
 * Students must follow ALL instructions when submitting assignments, which will including pushing your assignments to GitHub as well as submitting the assignment to Canvas.
 * Pushing to GitHub is NOT ENOUGH to fulfill the obligation of turning in an assignment.
 
