--- a/content/syllabus/6.course-outline.md
+++ b/content/syllabus/6.course-outline.md
@@ -18,7 +18,7 @@ I'm currently in the process of updating the course, adding more modern and rele
 | 6 No new content, finish project 1 | Project 1      |               |
 | 7 NodeJS Crash Course              | Lab 5          |               |
 | 8 Plugins, Modules, etc            | Lab 6          |               |
-| 9 Data Types and Regex             | Lab 7          |               |
+| 9 Data Types and RegEx             | Lab 7          |               |
 | 10 Web Scraping                    | Project 2      |               |
 | 11 Working with APIs               | Lab 8          |               |
 | 12 Deploying Secure Apps           | Lab 9          |               |
