--- a/content/syllabus/8.UC-policies.md
+++ b/content/syllabus/8.UC-policies.md
@@ -27,6 +27,16 @@ The University of Cincinnati is committed to providing all students with equal a
 
 All UC students have access to counseling and mental health care through University Health Services (UHS), which can provide both psychotherapy and psychiatric services. In addition, Counseling and Psychological Services (CAPS) can provide professional counseling upon request; students may receive five free counseling sessions through CAPS without insurance. Students are encouraged to seek assistance for anxiety, depression, trauma/assault, adjustment to college life, interpersonal/relational difficulty, sexuality, family conflict, grief and loss, disordered eating and body image, alcohol and substance abuse, anger management, identity development, and any other issues or concerns. After hours, students may call UHS at 513-556-2564 or CAPS Cares at 513-556-0648. For urgent physician consultation after-hours, students may call 513-584-7777.
 
+## Diversity, Equity, and Inclusion
+
+The University of Cincinnati embraces diversity, equity, and inclusion as core values that empower individuals to transform their lives and achieve their highest potential. The University of Cincinnati recognizes a very broad and inclusive concept of diversity that includes commonly recognized considerations such as race, ethnicity, gender, age, disability status, socioeconomic status, gender identity and expression, sexual identity, sexual orientation, religion, and regional or national origin. Going forward, we emphasize that UC’s concept of diversity will retain the capacity to grow with our understanding. Inclusion authentically brings traditionally excluded individuals and/or groups into processes, activities, and decision/policy making. We are committed to creating and fostering a positive learning and working environment based on open communication, mutual respect, and inclusion.
+
+## Valuing Student Identity
+
+The College of Education, Criminal Justice, Human Services, & Information Technology recognizes that gender identity is fluid and respects those that may not identify with the gender binary. Please feel free to share your lived pronouns with the instructors and staff members you may work with, in order to avoid misgendering in the learning space. To learn more about pronoun use, please check out mypronouns.org.
+
+We also understand that names may have some personal, cultural, or familial importance to everyone. If your name is being pronounced incorrectly in class, please make sure to find time to correct me through email or after class.
+
 ## Title IX
 
 Title IX is a federal civil rights law that prohibits discrimination on the basis of a person’s actual or perceived sex, gender, gender identity, gender expression, or sexual orientation. Title IX also address instances of sexual violence, dating or domestic violence, and stalking. If a student discloses a Title IX issue to a faculty member, the faculty member is required to forward that information to the Title IX Office. The Title IX office will follow up with the student and discuss how the University can take steps to address the impact on the student and the community. They will also inform the student of their rights and direct them to available resources. The priority is to make sure students are safe and successful here at the University of Cincinnati. Students are not required to talk to anyone in the Title IX Office. Students may also directly report any instance of sex or gender-based discrimination, harassment or violence to the Title IX office at 513-556-3349. Students who wish to know more about their rights and resources on campus, they can consult the [Title IX website](http://www.uc.edu/titleix) or contact the Title IX office directly at 513-556-3349.
