fix learning outcomes

--- a/content/syllabus/1.info.md
+++ b/content/syllabus/1.info.md
@@ -27,13 +27,9 @@ think creatively about lab and project assignments - Prerequisite Definition: To
 
 ## Learning outcomes
 
-1. Setup VMs for writing and running script. Write our first test script.
-2. Learn about different IDEs and select one that suits you.
-3. Learn Python, Node, Bash and PowerShell
-4. Learn about using Git and GitHub to manage your code.
-5. Learn about calling APIs and using the data retrieved from them.
-6. Compare and survey scripting languages
-7. Debug and handle errors
-8. Use scripts against web pages to collect data
-9. Deploy applications to the cloud
-10. Manage personal coding projects from beginning to end. Create something YOU want to create.
+* Compare and survey scripting languages
+* Be proficient in one scripting language to write scripts that automate network/system tasks
+* Declare variables and use control structures
+* Debug and handle errors
+* Use regular expressions
+* Query and manipulate databases using scripts
