fix course description

--- a/content/syllabus/1.info.md
+++ b/content/syllabus/1.info.md
@@ -3,7 +3,7 @@ sidebar_position: 1
 title: Course Information
 ---
 
-* **Course:** [IT3038C - Scripting Languages](#)
+* **Course:** IT3038C - Scripting Languages
 * **Format and credit hours:** 3 credit hours; In Person.
 * **Instructor:** Wesley Reed, [reedws@ucmail.uc.edu](mailto:reedws@ucmail.uc.edu)
 
@@ -13,12 +13,9 @@ The instructor reserves the right to update this syllabus as class needs arise. 
 
 ## Course Description
 
-This class will help you become familiar with what it means to be a script developer, when
-it is appropriate to write a script, and discover what is possible with scripts. We will focus
-on 4 different scripting languages: PowerShell, Bash, Python, and Node. Once introduced,
-you will have the option to stick with any one of these languages for the remainder of the
-course.  This course has an emphasis on how you apply what you learn, so be prepared to
-think creatively about lab and project assignments - Prerequisite Definition: To take this course you must: Have taken the following Courses IT1080C min grade C-,IT1081C min grade C-.
+This course provides students with the ability to create scripts to automate networking and security tasks. Students will survey scripting languages for data processing and administration task automation to automate network, systems, and security tasks. Hands-on active learning is required.
+
+Prerequisite Definition: To take this course you must: Have taken the following Courses IT1080C min grade C-,IT1081C min grade C-.
 
 ### Prerequisites
 
