continuing week 1 content

--- a/content/modules/module-1/github.mdx
+++ b/content/modules/module-1/github.mdx
@@ -1,7 +1,6 @@
 ---
-title: Module 1 - Git and GitHub
-sidebar_position: 1
-slug: /1
+title: Using Git and GitHub
+sidebar_position: 2
 ---
 import Icon from "@material-ui/core/Icon";
 import Tabs from '@theme/Tabs';
