--- a/content/modules/module-1/github.mdx
+++ b/content/modules/module-1/github.mdx
@@ -1,6 +1,7 @@
 ---
 title: Using Git and GitHub
 sidebar_position: 2
+slug: /1/git-github
 ---
 import Icon from "@material-ui/core/Icon";
 import Tabs from '@theme/Tabs';
