--- a/content/modules/module-1/github.mdx
+++ b/content/modules/module-1/github.mdx
@@ -221,7 +221,7 @@ Optional additional resource on branching: <https://learngitbranching.js.org/>
    <TabItem value="" label="GitHub Desktop">
       <ol>
          <li>
-            After you make your edits to the readme.md file locally in your favourite text editor, go to your command line terminal
+            After you make your edits to the readme.md file locally in your favorite text editor, go to your command line terminal
          </li>
          <li>
             At the bottom of the list of changes, in the Summary field, type a short, meaningful commit message. Optionally, you can add more information about the change in the Description field. <br />
