--- a/content/modules/module-1/python-exercises/index.mdx
+++ b/content/modules/module-1/python-exercises/index.mdx
@@ -2,12 +2,12 @@
 title: Python Exercises
 sidebar_label: Overview
 sidebar_position: 4
-draft: false
+slug: /1/python-exercises
 ---
 ## Learning outcomes
 1. Practice the use of Git and GitHub.
 2. Practice the use of Python to perform basic operations.
-3. Practise the use of Python to code solutions to techincal problems.
+3. Practice the use of Python to code solutions to technical problems.
 
 ## Goals
 This is a collection of Python exercises and coding challenges. The focus in this assignment is to:
@@ -19,7 +19,7 @@ This is a collection of Python exercises and coding challenges. The focus in thi
 ## Guidelines
 * This assignment utilized automated-tests to check for the correctness of your code. These tests can be a bit specific about what you name things
   * Please Follow the instructions on this assignment for the best outcome.
-* Make a habbit of committing and pusing your code frequently to GitHub.
+* Make a habit of committing and pushing your code frequently to GitHub.
 * Make sure to meaningful commit messages that describe what you did.
 * Make sure the automated tests and checks continue to pass after you make changes.
 * To be able to run the automated grading checks, make sure you have installed Python 3
