update grade weights

--- a/content/syllabus/4.grading.md
+++ b/content/syllabus/4.grading.md
@@ -8,12 +8,11 @@ title: Grading
 Assignments in this course include the following:
 
 * **Quizzes – 10%**
-* **Labs – 20%**
+* **Labs – 40%**
   * Always due on Sundays.
   * 10% will be deducted for every late day
   * Only available until 1 week after the due date.
-* **Project 1 – 20%**
-* **Project 2 & Peer Review – 20%**
+* **Projects – 20%**
 * **Final Project & Peer Review – 30%**
 * **Extra Credit**
   * Helping fellow classmates on MS Teams with their questions.
