--- a/content/modules/module-2/bash-basics/index.mdx
+++ b/content/modules/module-2/bash-basics/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Bash Exercises
+title: Bash Basics
 sidebar_label: Overview
 sidebar_position: 1
-slug: /2/bash-exercises
+slug: /2/bash-basics
 ---
 ## Learning outcomes
 1. Practice the use of Git and GitHub.
