--- a/content/modules/module-3/bash-files/index.mdx
+++ b/content/modules/module-3/bash-files/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Bash Backup
+title: Bash Files
 sidebar_label: Overview
 sidebar_position: 1
-slug: /3/bash-backup
+slug: /3/bash-files
 ---
 ## Learning outcomes
 1. Practice the use of Git and GitHub.
