add dir list instructions

--- a/content/modules/module-3/bash-files/index.mdx
+++ b/content/modules/module-3/bash-files/index.mdx
@@ -29,11 +29,13 @@ slug: /3/bash-files
       .
       ├── .vscode
       │   └── settings.json
-      ├── 1-backup-file.sh       ⬅️
-      ├── 2-backup-directory.sh  ⬅️
+      ├── 1-directory-listing.sh    ⬅️
+      ├── 2-backup-file.sh          ⬅️
+      ├── 3-backup-directory.sh     ⬅️
       ├── test_backup-file.sh
       ├── test_backup-directory.sh
-      └── README.md              🔼: update this once done
+      ├── test_directory-listing.sh
+      └── README.md                 🔼: update this once done
     ```
   * You will only be working on the files marked with the arrows
 2. Clone down the repository to your linux VM.
@@ -49,6 +51,7 @@ slug: /3/bash-files
 
 
 ## Resources
+- [ls man page](https://ss64.com/bash/ls.html)
 - [rm man page](https://ss64.com/bash/rm.html)
 - [cp man page](https://ss64.com/bash/cp.html)
 - [mkdir man page](https://ss64.com/bash/mkdir.html)
