added assignments cat

--- a/content/syllabus/4.grading.md
+++ b/content/syllabus/4.grading.md
@@ -7,8 +7,9 @@ title: Grading
 
 Assignments in this course include the following:
 
-* **Quizzes – 10%**
-* **Labs – 40%**
+* **Quizzes – 5%**
+* **Assignments – 10%**
+* **Labs – 35%**
   * Always due on Sundays.
   * 10% will be deducted for every late day
   * Only available until 1 week after the due date.
