update module list

--- a/content/syllabus/3.policies.md
+++ b/content/syllabus/3.policies.md
@@ -37,7 +37,7 @@ As an instructor, I greatly value your input regarding the strengths and areas f
 ## Late or Missing Policy
 
 * Quizzes will not be accepted (and will not be available) once the due date has passed.
-* Late work grade will be deducted 10% per day and no late work will be accepted after one week.
+* Late work for Labs and Assignments will be deducted 10% per day and no late work will be accepted after one week.
 * No Exception or additional extensions will be given except for the two University-approved situations:
   * Accommodations requested and verified in advance from the Office of Disability Services.
   * Religious holidays, when I am notified of them in advance.
