--- a/content/syllabus/6.course-outline.md
+++ b/content/syllabus/6.course-outline.md
@@ -8,21 +8,21 @@ I'm currently in the process of updating the course, adding more modern and rele
 
 ## Course Modules
 
-| Week                               | Modules/Topics | Assignments   |
-|:----------------------------------:|:--------------:|:-------------:|
-| 1 Intro / Up and Running           |                |               |
-| 2 Bash Crash Course                | Lab 1          |               |
-| 3 PowerShell Crash Course          | Lab 2          |               |
-| 4 Git Crash Course                 | Lab 3          |               |
-| 5 Python Crash Course              | Lab 4          |               |
-| 6 No new content, finish project 1 | Project 1      |               |
-| 7 NodeJS Crash Course              | Lab 5          |               |
-| 8 Plugins, Modules, etc            | Lab 6          |               |
-| 9 Data Types and RegEx             | Lab 7          |               |
-| 10 Web Scraping                    | Project 2      |               |
-| 11 Working with APIs               | Lab 8          |               |
-| 12 Deploying Secure Apps           | Lab 9          |               |
-| 13 Using Python Flask              | Lab 10         |               |
-| 14 New Topics in Scripting         | Lab 11 (Bonus) |               |
-| 15 Open Lab                        | Finals Due     | Project 3 due |
-| Project 3 Peer Review Due          |                |               |
+| Week                                                    | Assignments                |
+|:-------------------------------------------------------:|:--------------------------:|
+| 1 Intro / Up and Running with Linux and GitHub          | Lab 1 & Assn 1             |
+| 2 Bash Basics (Bashics)                                 | Lab 2 & Assn 2             |
+| 3 Working with files in Bash                            | Lab 3 & Assn 3             |
+| 4 Using Arguments in Bash                               | Lab 4 & Assn 4             |
+| 5 Using Regular Expressions in Bash                     | Lab 5 & Assn 5             |
+| 6 TBD                                                   | Lab 6 & Assn 6             |
+| 7 TBD                                                   | Lab 7 & Assn 7             |
+| 8 TBD                                                   | Project 1                  |
+| 9 TBD                                                   | Lab 8 & Assn 8             |
+| 10 Web Scraping                                         | Lab 9 & Assn 9             |
+| 11 Working with APIs                                    | Lab 10 & Assn 10           |
+| 12 Deploying Secure Apps                                | Lab 11 & Assn 11           |
+| 13 Using Python Flask                                   | Lab 12 & Assn 12           |
+| 14 New Topics in Scripting                              | Lab 13 & Assn 12           |
+| 15 Open Lab                                             | Final Project              |
+| Exam Week                                               | Final Proj Peer Review Due |
