--- a/content/syllabus/6.course-outline.md
+++ b/content/syllabus/6.course-outline.md
@@ -18,7 +18,7 @@ I'm currently in the process of updating the course, adding more modern and rele
 | 6 TBD                                                   | Lab 6 & Assn 6             |
 | 7 TBD                                                   | Lab 7 & Assn 7             |
 | 8 TBD                                                   | Project 1                  |
-| 9 TBD                                                   | Lab 8 & Assn 8             |
+| 9 Python Basics                                         | Lab 8 & Assn 8             |
 | 10 Web Scraping                                         | Lab 9 & Assn 9             |
 | 11 Working with APIs                                    | Lab 10 & Assn 10           |
 | 12 Deploying Secure Apps                                | Lab 11 & Assn 11           |
