--- a/content/syllabus/6.course-outline.md
+++ b/content/syllabus/6.course-outline.md
@@ -19,10 +19,10 @@ I'm currently in the process of updating the course, adding more modern and rele
 | 7 TBD                                                   | Lab 7 & Assn 7             |
 | 8 TBD                                                   | Project 1                  |
 | 9 Python Basics                                         | Lab 8 & Assn 8             |
-| 10 Web Scraping                                         | Lab 9 & Assn 9             |
-| 11 Working with APIs                                    | Lab 10 & Assn 10           |
-| 12 Deploying Secure Apps                                | Lab 11 & Assn 11           |
-| 13 Using Python Flask                                   | Lab 12 & Assn 12           |
-| 14 New Topics in Scripting                              | Lab 13 & Assn 12           |
-| 15 Open Lab                                             | Final Project              |
+| 10 TBD                                                  | Lab 9 & Assn 9             |
+| 11 TBD                                                  | Lab 10 & Assn 10           |
+| 12 TBD                                                  | Lab 11 & Assn 11           |
+| 13 TBD                                                  | Lab 12 & Assn 12           |
+| 14 TBD                                                  | Lab 13 & Assn 12           |
+| 15 TBD                                                  | Final Project              |
 | Exam Week                                               | Final Proj Peer Review Due |
