--- a/content/modules/module-3/bash-files/index.mdx
+++ b/content/modules/module-3/bash-files/index.mdx
@@ -56,3 +56,4 @@ slug: /3/bash-files
 - [cp man page](https://ss64.com/bash/cp.html)
 - [mkdir man page](https://ss64.com/bash/mkdir.html)
 - [tar man page](https://ss64.com/bash/tar.html)
+- [var substitution](https://tldp.org/LDP/abs/html/parameter-substitution.html)
