--- a/content/modules/module-4/bash-args/index.mdx
+++ b/content/modules/module-4/bash-args/index.mdx
@@ -84,3 +84,4 @@ slug: /4/bash-args
 - [while man page](https://ss64.com/bash/while.html)
 - [case man page](https://ss64.com/bash/case.html)
 - [if man page](https://ss64.com/bash/if.html)
+- [getopts man page](https://ss64.com/bash/getopts.html)
