--- a/content/modules/module-7/python-exercises/index.mdx
+++ b/content/modules/module-7/python-exercises/index.mdx
@@ -34,12 +34,11 @@ This is a collection of Python exercises and coding challenges. The focus in thi
       │   └── settings.json
       ├── numbers_1.py           ⬅️
       ├── strings_2.py           ⬅️
-      ├── arrays_3.py            ⬅️
+      ├── lists_3.py            ⬅️
       ├── logical_operators_4.py ⬅️
       ├── flow_control_5.jpy     ⬅️
-      ├── test_arrays.py
+      ├── test_lists.py
       ├── test_strings.py
-      ├── test_arrays.py
       ├── test_logical_operators.py
       ├── test_flow_control.py
       ├── .gitignore
@@ -50,7 +49,7 @@ This is a collection of Python exercises and coding challenges. The focus in thi
 2. Clone down the repository to your local computer.
 3. Install the project dependencies using the `pip install -r requirements.txt` command.
   * Make sure you're in the project directory in the terminal before you run this command.
-4. Run the project tests using `pytest`
+4. Run the project tests using the command `pytest`
   You should see all the tests failing like so:
   ![failing tests image](assets/failing_tests.png)
 
