--- a/content/modules/module-7/python-exercises/demo.mdx
+++ b/content/modules/module-7/python-exercises/demo.mdx
@@ -53,10 +53,10 @@ ________________
 
 ## Example 2:
 1. Well, no need for the setup steps here (you should already be in the directory)
-2. Open the file `arrays_3.py`. Particularly at this function
+2. Open the file `lists_3.py`. Particularly at this function
     ```python
       '''
-      IndexOf: you should be able to determine the location of an item in an array
+      IndexOf: you should be able to determine the location of an item in an list
       Example:
       arr = [1,2,3,5,6]
       calling the function like
@@ -65,7 +65,7 @@ ________________
       def index_of(arr, item):
           return
     ```
-3. The `index_of` method is supposed to return the index of a certain element in an array. [You can learn more about Python Built-in method here](https://docs.python.org/3.10/library/array.html?highlight=inde#array.array.index)
+3. The `index_of` method is supposed to return the index of a certain element in a list. [You can learn more about Python Built-in method here](https://docs.python.org/3.10/library/array.html?highlight=inde#array.array.index)
 4. My implementation for this is as follows
   ```python
     def index_of(arr, item):
