--- a/content/modules/module-7/python-exercises/index.mdx
+++ b/content/modules/module-7/python-exercises/index.mdx
@@ -34,9 +34,9 @@ This is a collection of Python exercises and coding challenges. The focus in thi
       │   └── settings.json
       ├── numbers_1.py           ⬅️
       ├── strings_2.py           ⬅️
-      ├── lists_3.py            ⬅️
+      ├── lists_3.py             ⬅️
       ├── logical_operators_4.py ⬅️
-      ├── flow_control_5.jpy     ⬅️
+      ├── flow_control_5.py      ⬅️
       ├── test_lists.py
       ├── test_strings.py
       ├── test_logical_operators.py
