new file structure

--- a/content/modules/module-9/python-args/index.mdx
+++ b/content/modules/module-9/python-args/index.mdx
@@ -32,8 +32,16 @@ This is a collection of Python exercises and coding challenges. The focus in thi
       .
       ├── .vscode
       │   └── settings.json
-      ├── args.py               ⬅️
-      ├── test_args.py
+      ├── e1_list_dir.py            ⬅️
+      ├── e2_delete_dir.py          ⬅️
+      ├── e3_rename_dir.py          ⬅️
+      ├── e4_search_dir.py          ⬅️
+      ├── e5_args.py                ⬅️
+      ├── test_e1_list_dir.py
+      ├── test_e2_delete_dir.py
+      ├── test_e3_rename_dir.py
+      ├── test_e4_search_dir.py
+      ├── test_e5_args.py
       ├── .gitignore
       ├── requirements.txt
       └── README.md                 🔼: update this once done
