--- a/content/modules/module-7/python-exercises/demo.mdx
+++ b/content/modules/module-7/python-exercises/demo.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 4.1
 title: Examples
-slug: /7/python-exercises/demo
+slug: /7/python-basics/demo
 ---
 Below are a couple of examples for how you should go about this assignment.
 
@@ -9,7 +9,7 @@ Below are a couple of examples for how you should go about this assignment.
 ### Setup
 1. Navigate to your repository in the command line.
   - You can either use the `cd PATH_TO_FOLDER` command.
-    - In my case the command was `cd /Users/wesreed/git/School/IT3049/Python-Exercises`
+    - In my case the command was `cd /Users/wesreed/git/School/IT3049/Python-Basics`
     - Use the `pwd` command to **P**rint **W**orking **D**irectory and confirm your location
   - **OR** You could open VSCode integrated terminal window and it will open in the terminal already in the right path.
 2. Installing the dependencies `pip install -r requirements.txt`
