--- a/content/modules/module-7/python-exercises/index.mdx
+++ b/content/modules/module-7/python-exercises/index.mdx
@@ -2,7 +2,7 @@
 title: Python Exercises
 sidebar_label: Overview
 sidebar_position: 4
-slug: /7/python-exercises
+slug: /7/python-basics
 ---
 ## Learning outcomes
 1. Practice the use of Git and GitHub.
