update grade weights

--- a/content/syllabus/4.grading.md
+++ b/content/syllabus/4.grading.md
@@ -13,8 +13,8 @@ Assignments in this course include the following:
   * Always due on Sundays.
   * 10% will be deducted for every late day
   * Only available until 1 week after the due date.
-* **Projects – 20%**
-* **Final Project & Peer Review – 30%**
+* **Bash Projects – 20%**
+* **Python Project – 30%**
 * **Extra Credit**
   * Helping fellow classmates on MS Teams with their questions.
   * Contributing the Labs and Syllabus Repositories with Fixes.
