updated course outline

--- a/content/syllabus/6.course-outline.md
+++ b/content/syllabus/6.course-outline.md
@@ -4,25 +4,20 @@ title: Course Outline (subject to change)
 sidebar_label: Course Outline
 ---
 
-I'm currently in the process of updating the course, adding more modern and relevant topics. The following may not reflect the changes implemented in the class yet.
-
 ## Course Modules
 
-| Week                                                    | Assignments                |
-|:-------------------------------------------------------:|:--------------------------:|
-| 1 Intro / Up and Running with Linux and GitHub          | Lab 1 & Assn 1             |
-| 2 Bash Basics (Bashics)                                 | Lab 2 & Assn 2             |
-| 3 Working with files in Bash                            | Lab 3 & Assn 3             |
-| 4 Using Arguments in Bash                               | Lab 4 & Assn 4             |
-| 5 Using Regular Expressions in Bash                     | Lab 5 & Assn 5             |
-| 6 TBD                                                   | Lab 6 & Assn 6             |
-| 7 TBD                                                   | Lab 7 & Assn 7             |
-| 8 TBD                                                   | Project 1                  |
-| 9 Python Basics                                         | Lab 8 & Assn 8             |
-| 10 TBD                                                  | Lab 9 & Assn 9             |
-| 11 TBD                                                  | Lab 10 & Assn 10           |
-| 12 TBD                                                  | Lab 11 & Assn 11           |
-| 13 TBD                                                  | Lab 12 & Assn 12           |
-| 14 TBD                                                  | Lab 13 & Assn 12           |
-| 15 TBD                                                  | Final Project              |
-| Exam Week                                               | Final Proj Peer Review Due |
+| Module                                                  | Assignments                   |
+|:-------------------------------------------------------:|:-----------------------------:|
+| 1 Intro / Up and Running with Linux and GitHub          | GitHub Hello World & VM Setup |
+| 2 Bash Basics (Bashics)                                 | Lab 1 & Assn 1                |
+| 3 Working with files in Bash                            | Lab 2 & Assn 2                |
+| 4 Using Arguments in Bash                               | Lab 3 & Assn 3                |
+| 5 Using Regular Expressions in Bash                     | Lab 4 & Assn 4                |
+| 6 Bash Project                                          | Bash Project                  |
+| 7 Python Basics                                         | Lab 5 & Assn 5                |
+| 8 Working with files in Python                          | Lab 6 & Assn 6                |
+| 9 Using Arguments in Python                             | Lab 7 & Assn 7                |
+| 10 Using Regular Expressions in Python                  | Lab 8 & Assn 8                |
+| 11 Managing CSV data with Python                        | Lab 9 & Assn 9                |
+| 12 Connecting to SQL in Python                          | Lab 10 & Assn 10              |
+| 13 Python Project                                       | Python Project                |
