--- a/content/modules/module-1/github.mdx
+++ b/content/modules/module-1/github.mdx
@@ -315,7 +315,7 @@ Take a look at your GitHub profile and you'll see your work reflected on your co
 
 ### Checklist
 Make sure you completed the following items before you submit the assignment on Canvas:
-- [ ] Create a project on GitHub
+- [ ] Create a repository on GitHub
 - [ ] Create a branch on GitHub
 - [ ] Make changes to the branch
 - [ ] Open a pull request on GitHub
