adjusted push command

--- a/content/modules/module-1/github.mdx
+++ b/content/modules/module-1/github.mdx
@@ -246,7 +246,7 @@ Optional additional resource on branching: <https://learngitbranching.js.org/>
             type <code>git commit -m "edited readme file"</code> to save your changes.
          </li>
          <li>
-            type <code>git push origin main</code> to push your changes to the remote main branch.
+            type <code>git push</code> to push your changes to the remote branch.
          </li>
       </ol>
    </TabItem>
